Please see http://www.poissonboltzmann.org/apbs/release-history for the
complete change log

# These are notes for the current version of APBS
* Added tools/matlab/solver with simple Matlab LPBE solver for prototyping,
  teaching, etc.
* Deprecated APBS XML output format.
* Deprecated nlev keyword.
* Added etol keyword, which allows user-defined error tolerance in 
  LPBE and NPBE calculations (default errtol value is 1.0e-6).

# BUGFIXES
* Modified Vpmg_dbForce with some grid checking code provided by Matteo Rotter.